gcs 1.3.0
requires java 11, various minor changes and improvements, adds 'active clients'